Bug 424607 - Fails to build pipewirestream.cpp
Summary: Fails to build pipewirestream.cpp
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-07-24 12:28 UTC by Fabian Vogt
Modified: 2020-07-24 15:43 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fabian Vogt 2020-07-24 12:28:22 UTC
This is probably due to glibc 2.26?

[  638s] /home/abuild/rpmbuild/BUILD/kwin-5.19.80git.20200724T020645~27951dc9e/screencast/pipewirestream.cpp: In static member function 'static void PipeWireStream::onStreamAddBuffer(void*, pw_buffer*)':
[  638s] /home/abuild/rpmbuild/BUILD/kwin-5.19.80git.20200724T020645~27951dc9e/screencast/pipewirestream.cpp:138:62: error: 'MFD_CLOEXEC' was not declared in this scope
[  638s]          spa_data->fd = memfd_create("kwin-screencast-memfd", MFD_CLOEXEC | MFD_ALLOW_SEALING);
[  638s]                                                               ^~~~~~~~~~~
[  638s] /home/abuild/rpmbuild/BUILD/kwin-5.19.80git.20200724T020645~27951dc9e/screencast/pipewirestream.cpp:138:62: note: suggested alternative: 'FD_CLOEXEC'
[  638s]          spa_data->fd = memfd_create("kwin-screencast-memfd", MFD_CLOEXEC | MFD_ALLOW_SEALING);
[  638s]                                                               ^~~~~~~~~~~
[  638s]                                                               FD_CLOEXEC
[  638s] /home/abuild/rpmbuild/BUILD/kwin-5.19.80git.20200724T020645~27951dc9e/screencast/pipewirestream.cpp:138:76: error: 'MFD_ALLOW_SEALING' was not declared in this scope
[  638s]          spa_data->fd = memfd_create("kwin-screencast-memfd", MFD_CLOEXEC | MFD_ALLOW_SEALING);
[  638s]                                                                             ^~~~~~~~~~~~~~~~~
[  638s] /home/abuild/rpmbuild/BUILD/kwin-5.19.80git.20200724T020645~27951dc9e/screencast/pipewirestream.cpp:138:76: note: suggested alternative: '_PC_ALLOC_SIZE_MIN'
[  638s]          spa_data->fd = memfd_create("kwin-screencast-memfd", MFD_CLOEXEC | MFD_ALLOW_SEALING);
[  638s]                                                                             ^~~~~~~~~~~~~~~~~
[  638s]                                                                             _PC_ALLOC_SIZE_MIN
[  638s] /home/abuild/rpmbuild/BUILD/kwin-5.19.80git.20200724T020645~27951dc9e/screencast/pipewirestream.cpp:138:24: error: 'memfd_create' was not declared in this scope
[  638s]          spa_data->fd = memfd_create("kwin-screencast-memfd", MFD_CLOEXEC | MFD_ALLOW_SEALING);
[  638s]                         ^~~~~~~~~~~~
[  638s] /home/abuild/rpmbuild/BUILD/kwin-5.19.80git.20200724T020645~27951dc9e/screencast/pipewirestream.cpp:138:24: note: suggested alternative: 'timer_create'
[  638s]          spa_data->fd = memfd_create("kwin-screencast-memfd", MFD_CLOEXEC | MFD_ALLOW_SEALING);
[  638s]                         ^~~~~~~~~~~~
[  638s]                         timer_create
[  638s] /home/abuild/rpmbuild/BUILD/kwin-5.19.80git.20200724T020645~27951dc9e/screencast/pipewirestream.cpp:150:30: error: 'F_SEAL_GROW' was not declared in this scope
[  638s]          unsigned int seals = F_SEAL_GROW | F_SEAL_SHRINK | F_SEAL_SEAL;
[  638s]                               ^~~~~~~~~~~
[  638s] /home/abuild/rpmbuild/BUILD/kwin-5.19.80git.20200724T020645~27951dc9e/screencast/pipewirestream.cpp:150:30: note: suggested alternative: 'F_SETLKW'
[  638s]          unsigned int seals = F_SEAL_GROW | F_SEAL_SHRINK | F_SEAL_SEAL;
[  638s]                               ^~~~~~~~~~~
[  638s]                               F_SETLKW
[  638s] /home/abuild/rpmbuild/BUILD/kwin-5.19.80git.20200724T020645~27951dc9e/screencast/pipewirestream.cpp:150:44: error: 'F_SEAL_SHRINK' was not declared in this scope
[  638s]          unsigned int seals = F_SEAL_GROW | F_SEAL_SHRINK | F_SEAL_SEAL;
[  638s]                                             ^~~~~~~~~~~~~
[  638s] /home/abuild/rpmbuild/BUILD/kwin-5.19.80git.20200724T020645~27951dc9e/screencast/pipewirestream.cpp:150:60: error: 'F_SEAL_SEAL' was not declared in this scope
[  638s]          unsigned int seals = F_SEAL_GROW | F_SEAL_SHRINK | F_SEAL_SEAL;
[  638s]                                                             ^~~~~~~~~~~
[  638s] /home/abuild/rpmbuild/BUILD/kwin-5.19.80git.20200724T020645~27951dc9e/screencast/pipewirestream.cpp:150:60: note: suggested alternative: 'F_SETLEASE'
[  638s]          unsigned int seals = F_SEAL_GROW | F_SEAL_SHRINK | F_SEAL_SEAL;
[  638s]                                                             ^~~~~~~~~~~
[  638s]                                                             F_SETLEASE
[  638s] /home/abuild/rpmbuild/BUILD/kwin-5.19.80git.20200724T020645~27951dc9e/screencast/pipewirestream.cpp:151:33: error: 'F_ADD_SEALS' was not declared in this scope
[  638s]          if (fcntl(spa_data->fd, F_ADD_SEALS, seals) == -1)
[  638s]                                  ^~~~~~~~~~~
[  638s] /home/abuild/rpmbuild/BUILD/kwin-5.19.80git.20200724T020645~27951dc9e/screencast/pipewirestream.cpp:151:33: note: suggested alternative: 'F_OFD_SETLK'
[  638s]          if (fcntl(spa_data->fd, F_ADD_SEALS, seals) == -1)
[  638s]                                  ^~~~~~~~~~~
[  638s]                                  F_OFD_SETLK
Comment 1 Bug Janitor Service 2020-07-24 13:19:36 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/143
Comment 2 Aleix Pol 2020-07-24 15:43:36 UTC
Git commit a051baf1a921905e318b47c4489a0a78b8cf873f by Aleix Pol.
Committed on 24/07/2020 at 14:59.
Pushed by apol into branch 'master'.

screencasting: still build if memfd isn't available

M  +2    -0    screencast/pipewirestream.cpp

https://invent.kde.org/plasma/kwin/commit/a051baf1a921905e318b47c4489a0a78b8cf873f