[screencast] Add missing include

BUG: 424607